# n4k_autoresearch

./: .gitmodules  AGENTS.md  README.md  ideas.tsv  macro_framework.md  rejected_ideas.md  research_log.md  risk_framework.md  robustness_grid.csv  universe.md
ideas/: RSP-vs-QQQ-retail-breadth-001.md  US2s10s-flattener-sticky-inflation-001.md  US5Y-breakevens-energy-inflation-001.md  retail-tail-risk-momentum-001.md
iter_1/: AGENTS.md  data_catalog.md  (+3 more)
iter_2/: README.md  analysis.executed.ipynb  analysis.html  analysis.ipynb  plan.md  prepare.py  program.md  pyproject.toml  research.html  research.md  train.py
iter_2/scripts/: ingest_public_macro.py
iter_2/tests/: test_prepare.py
iter_4/: .gitignore  README.md  analysis.executed.ipynb  analysis.html  analysis.ipynb  plan.html  prepare.py  program.md  pyproject.toml  research.html  results.tsv  train.py
iter_4/datasets/: artifacts.py  cache.py  http.py  http_cache.py  ingest_beige_book.py  ingest_fomc.py  ingest_fred.py  ingest_prices.py  ingest_sec.py  loaders.py  public_features.py  quality.py  registry.py  text_features.py
iter_4/ideas/: schema.py
iter_4/research/: artifacts.py  overfit.py  robustness.py  walk_forward.py
iter_4/scripts/: ingest_public_macro.py
iter_4/tests/: test_artifacts.py  test_data_quality.py  test_datasets.py  test_http_cache.py  test_idea_schema.py  test_objective_gate.py  test_oos.py  test_overfit.py  test_prepare_public_features.py  test_public_feature_workflow.py  test_public_text_ingestion.py  test_robustness.py  test_train_public_features.py  test_walk_forward.py
(+26 files in other folders)
